# sqscpp

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cli.py  compose-test.yml  compose.yml  dev.Dockerfile  test.compose.yml
.github/workflows/: test.yml
src/: cli_args.cpp  cli_args.hpp  cli_args_test.cpp  json_serde_test.cpp  main.cpp  protocol.cpp  protocol.hpp  protocol_test.cpp  router.cpp  router.hpp  serde.cpp  serde.hpp  sqs.cpp  sqs.hpp
test/: consumer.js  package-lock.json  package.json  producer.js
test_requests/: create_queue.sh  delete_queue.sh  get_queue_url.sh  list_queue_tags.sh  list_queues.sh  tag_queue.sh  untag_queue.sh
